--- a/style/component/activity-cards.css
+++ b/style/component/activity-cards.css
@@ -213,13 +213,10 @@
     .activity .pink .card-mask .detail .p1{
         background-color: var(--color-secondary-pink-100);
     }
+    .activity .card.pink,
     .activity .card.purple{
-        border: 1px solid var(--color-secondary-purple-700);
+        border: 1px solid var(--color-neutral-500);
     }
-    .activity .card.pink{
-        border: 1px solid var(--color-secondary-pink-700);
-    }
-
     .activity .card-mask .detail{
         justify-content: flex-end;
         padding: 0;
