--- a/style/component/reading-cards.css
+++ b/style/component/reading-cards.css
@@ -162,11 +162,9 @@
     .reading.purple .card:hover{
         background-color: var(--color-white);
     }
-    .reading.pink .card{
-        border: 1px solid var(--color-secondary-pink-700);
-    }
+    .reading.pink .card,
     .reading.purple .card{
-        border: 1px solid var(--color-secondary-purple-700);
+        border: 1px solid var(--color-neutral-500);
     }
     .reading .card .title{
         margin: 12px 0 110px 0;
